--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ Navbar */
 }
 header{
     background-color: #1E1E1E;
+   
+   
   
 }
 nav .nav-title{
@@ -101,6 +103,17 @@ nav{
 .banner-buttons :last-child{
     background-color: #1E1E1E;
 }
+
+.banner-img img{
+    width: 464px;
+  height: 770px;
+
+}
+/* .banner-img img {
+    width: 100%;
+  height: 100%;
+
+} */
 .badge{
     background-color:  #3A3A3A;
     padding: 10px 26px;
@@ -112,9 +125,123 @@ nav{
     top: 180px;
 }
 
+.play-badge{
+    background-color:  #3A3A3A;
+ width: 274px;
+ height: 80px;
+    border-radius: 10px;
+
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    /* padding: 20px 36px; */
+    top: 740px;
+ 
+
+ 
+}
+
+.play-btn{
+    background-color: #E6533C;
+    height: 50px;
+    width: 50px;
+    border: none;
+    border-radius: 50%;
+}
+    #play
+    {
+
+    }
+
+/* Main Styling */
+main{
+    background-color: #1E1E1E;
+    width: auto;
+    font-family: "Inter", sans-serif;
+   
+}
+/*........  Change Your Habits Styling....... */
+.habits-container{
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 133px;
+}
+.habit-details{
+    text-align: center;
+    margin-bottom: 40px;
+}
+ .habit-cards {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+   
+} 
+.habit-card img{
+
+    border-radius: 50%;
+}
+.habit-card .card-info{
+    
+}
+.habit-details h1{
+    font-size: 3.8rem;
+}
+.habit-details p{
+    font-size: 1rem;
+    color: rgba(255, 255, 255, 0.5);
+    margin-top: 18px;
+    margin-bottom: 70px;
+}
+
+.habit-card h3{
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+.habit-card p{
+    font-size: 1rem;
+    color: rgba(255, 255, 255, 0.5);
+    font-weight: 400;
+    margin-top: 8px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* 
 Respnsive For Mobile Device */
 @media screen and (max-width:576px) {
+.banner-container, .habit-cards{
+    display: flex;
+    flex-direction: column;
+}
+.habit-card{
+    margin-top: 47px;
+}
+.habit-card .card-info{
+    margin-top: 34px;
+}
+.habit-details{
+    margin-top: -120px;
+}
+
+
     nav ul{
      display: none;
     }
