--- a/style.css
+++ b/style.css
@@ -1,210 +1,263 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 /* font-family: "Inter", sans-serif; */
 
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap");
 
-
-  
-
-
-
-*{
-    padding: 0;
-    margin: 0;
-    color:#FFFFFF;
+* {
+  padding: 0;
+  margin: 0;
+  color: #ffffff;
 }
-.primary-color{
-    color: #E6533C;
+:root{
+  --secondary-text: rgba(255, 255, 255, 0.5);
+  --btn-color:#e6533c;
 }
-a{
-    text-decoration: none;
+.primary-color {
+  color: #e6533c;
 }
-li{
-    list-style: none;
+a {
+  text-decoration: none;
+}
+li {
+  list-style: none;
 }
 
 /* 
 Navbar */
-.menu-icon{
-    display: none;
+.menu-icon {
+  display: none;
 }
-header{
-    background-color: #1E1E1E;
-   
-   
-  
+header {
+  background-color: #1e1e1e;
 }
-nav .nav-title{
-    font-size: 3.1rem;
-    font-weight: 800;
+nav .nav-title {
+  font-size: 3.1rem;
+  font-weight: 800;
 }
-nav ul{
-    display: flex;
-   
+nav ul {
+  display: flex;
 }
-nav li{
-    margin-right: 3.90rem;
+nav li {
+  margin-right: 3.9rem;
+}
+nav li a {
+  font-size: 1.3rem;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-}
-nav li a{
-  
-    font-size: 1.3rem;
-}
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
- max-width: 80%;
-    margin: 0 auto;
-    
+  max-width: 80%;
+  margin: 0 auto;
 }
 /* ........Banner Section Styling ............*/
-.banner-container{
-    max-width: 80%;
+.banner-container {
+  max-width: 80%;
 
- 
-    /* border: 2px solid white; */
-    margin: 0 auto;
+  /* border: 2px solid white; */
+  margin: 0 auto;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 #shape {
-    font-family: "Dancing Script", cursive;
-    font-optical-sizing: auto;
- 
-    font-style: normal;
-    font-weight: 400;
-  }
-.banner-container h1{
-    font-size: 6.4rem;
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+
+  font-style: normal;
+  font-weight: 400;
 }
-.banner-container p{
-    font-size: 2rem;
-    margin-top: 37px;
-    font-weight: 400;
-    color: rgba(255, 255, 255, 0.5);
+.banner-container h1 {
+  font-size: 6.4rem;
 }
-.banner-buttons button{
-    margin-top: 37px;
-    padding: 10px 16px;
-    border: 1px solid white;
-    border-radius: 20px;
-    font-size: 1.3rem;
-    font-weight: 600;
-    margin-right: 18px;
+.banner-container p {
+  font-size: 2rem;
+  margin-top: 37px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
 }
-.banner-buttons :first-child{
-    background-color: #E6533C;
-    border: none;
+.banner-buttons button {
+  margin-top: 37px;
+  padding: 10px 16px;
+  border: 1px solid white;
+  border-radius: 20px;
+  font-size: 1.3rem;
+  font-weight: 600;
+  margin-right: 18px;
 }
-.banner-buttons :last-child{
-    background-color: #1E1E1E;
+.banner-buttons :first-child {
+  background-color: #e6533c;
+  border: none;
+}
+.banner-buttons :last-child {
+  background-color: #1e1e1e;
 }
 
-.banner-img img{
-    width: 464px;
+.banner-img img {
+  width: 464px;
   height: 770px;
-
 }
 /* .banner-img img {
     width: 100%;
   height: 100%;
 
 } */
-.badge{
-    background-color:  #3A3A3A;
-    padding: 10px 26px;
-    border-radius: 10px;
-    width: 100px;
-    text-align: center;
-    position: relative;
-    left: 180px;
-    top: 180px;
+.badge {
+  background-color: #3a3a3a;
+  padding: 10px 26px;
+  border-radius: 10px;
+  width: 100px;
+  text-align: center;
+  position: relative;
+  left: 180px;
+  top: 180px;
 }
 
-.play-badge{
-    background-color:  #3A3A3A;
- width: 274px;
- height: 80px;
-    border-radius: 10px;
+.play-badge {
+  background-color: #3a3a3a;
+  width: 274px;
+  height: 80px;
+  border-radius: 10px;
 
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    /* padding: 20px 36px; */
-    top: 740px;
- 
-
- 
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  /* padding: 20px 36px; */
+  top: 740px;
 }
 
-.play-btn{
-    background-color: #E6533C;
-    height: 50px;
-    width: 50px;
-    border: none;
-    border-radius: 50%;
+.play-btn {
+  background-color: #e6533c;
+  height: 50px;
+  width: 50px;
+  border: none;
+  border-radius: 50%;
 }
-    #play
-    {
-
-    }
+#play {
+}
 
 /* Main Styling */
-main{
-    background-color: #1E1E1E;
-    width: auto;
-    font-family: "Inter", sans-serif;
-   
+main {
+  background-color: #1e1e1e;
+  width: auto;
+  font-family: "Inter", sans-serif;
 }
 /*........  Change Your Habits Styling....... */
-.habits-container{
-    width: 80%;
-    margin: 0 auto;
-    padding-top: 133px;
+.habits-container {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 133px;
 }
-.habit-details{
-    text-align: center;
-    margin-bottom: 40px;
+.habit-details {
+  text-align: center;
+  margin-bottom: 40px;
 }
- .habit-cards {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-   
-} 
-.habit-card img{
-
-    border-radius: 50%;
+.habit-cards {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
 }
-.habit-card .card-info{
-    
+.habit-card img {
+  border-radius: 50%;
 }
-.habit-details h1{
-    font-size: 3.8rem;
+.habit-card .card-info {
 }
-.habit-details p{
-    font-size: 1rem;
-    color: rgba(255, 255, 255, 0.5);
-    margin-top: 18px;
-    margin-bottom: 70px;
+.habit-details h1 {
+  font-size: 3.8rem;
+}
+.habit-details p {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.5);
+  margin-top: 18px;
+  margin-bottom: 70px;
 }
 
-.habit-card h3{
-    font-size: 1.4rem;
-    font-weight: 600;
+.habit-card h3 {
+  font-size: 1.4rem;
+  font-weight: 600;
 }
-.habit-card p{
-    font-size: 1rem;
-    color: rgba(255, 255, 255, 0.5);
-    font-weight: 400;
-    margin-top: 8px;
+.habit-card p {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 400;
+  margin-top: 8px;
+}
+/* .Run And Extra Section. */
+
+.run-container {
+  width: 80%;
+  margin: 0 auto;
+ 
+  margin-top: 133px;
+  background-color: #273648;
+  display: flex;
+
+  border-radius: 18px;
+
+  background: rgb(34, 34, 34);
+  /* padding:  0px 20px; */
+}
+.run-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+
+ 
+}
+.run-details h1 {
+  font-size: 4rem;
+  font-weight: 900;
+}
+
+.run-details p {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 400;
+  margin-top: 20px;
+}
+
+.run-details button {
+  background-color: #e6533c;
+  border: none;
+  padding: 16px 35px;
+  border-radius: 55px;
+  margin-top: 40px;
+}
+.run-img {
+  padding: 40px 40px;
+}
+.run-img img {
+  width: 485px;
+  height: 415px;
+
+  border-radius: 30px;
+  object-fit: cover;
+}
+/* bmi-calculator  Styling */
+.bmi-calculator{
+  width: 80%;
+  border: 1px solid rgb(255, 255, 255);
+  margin: 0 auto;
+  margin-bottom: 40px;
+
+}
+.bmi-table table,th,td
+{
+  border: 1px solid var(--secondary-text);
+  border-collapse: collapse;text-align: center
+}
+th{
+  text-align: center
+}
+.bmi-table{
+  width: 400px;
+  height: 300px;
 }
 
 
@@ -213,55 +266,53 @@ main{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+/* .hide{
+  display: none;
+} */
 /* 
 Respnsive For Mobile Device */
-@media screen and (max-width:576px) {
-.banner-container, .habit-cards{
+@media screen and (max-width: 576px) {
+  .banner-container,
+  .habit-cards,
+  .run-container {
     display: flex;
     flex-direction: column;
-}
-.habit-card{
-    margin-top: 47px;
-}
-.habit-card .card-info{
-    margin-top: 34px;
-}
-.habit-details{
-    margin-top: -120px;
-}
-
-
-    nav ul{
-     display: none;
-    }
- nav .menu-icon{
-     display: block;
- }
- 
- 
- 
- 
- 
- 
-     .footer-main{
-         flex-direction: column ;
-         gap: 20px;
-     }
+  }
+  .run-container {
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+  }
+  .run-container img {
+    max-width: 100%;
    
-     
- 
- 
- 
- 
- }
+  }
+  .run-img {
+    padding:40px 0;
+   
+  }
+  .run-details button {
+    width: 100%;
+  }
+  .habit-card {
+    margin-top: 47px;
+  }
+  .habit-card .card-info {
+    margin-top: 34px;
+  }
+  .habit-details {
+    margin-top: -120px;
+  }
+
+  nav ul {
+    display: none;
+  }
+  nav .menu-icon {
+    display: block;
+  }
+
+  .footer-main {
+    flex-direction: column;
+    gap: 20px;
+  }
+}
