--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ main {
   border-radius: 18px;
 
   background: rgb(34, 34, 34);
-  border: 2px solid beige;
+  
  
 }
 .run-details {
@@ -241,6 +241,8 @@ main {
   padding: 16px 35px;
   border-radius: 55px;
   margin-top: 40px;
+  font-size: 24px;
+  font-weight: 600;
 }
 .run-img {
   padding: 40px 40px;
@@ -404,6 +406,9 @@ grid-area: height;
   padding: 16px 20px;color: white;
   font-size: 1rem;
   font-weight: 600;
+  ;
+ 
+
 }
 
 
@@ -463,11 +468,19 @@ bottom: 50px;
   z-index: 300;
 }
 /* TESTIMONIAL sECTION STYLING */
+.testimonialHeading{
+  text-align: center;
+  font-size: 4rem;
+  padding-top: 80px;
+  margin-bottom: 90px;
+}
 
 
 .testimonial-container{
   width: 100%;
   background-color: #1e1e1e;
+
+  padding-bottom: 100px;
 
 }
 .testimonial-main{
@@ -532,12 +545,16 @@ background-size: cover;
 
 }
 .clients-review{
+  
   width: 40%;
   display: flex
 ;
 flex-direction: column;
 justify-content: center;
 margin-left: 40px;
+padding-top:50px ;
+padding-bottom: 80px;
+/* margin-top: 50px; */
 }
 .testimonial-main h2{
   font-size: 4rem;
@@ -571,12 +588,15 @@ height: 650px;
 
  
 }
+
 .footer-main{
   display: flex;
   width: 80%;
   margin: 0 auto;
   justify-content: space-between;
   margin-top: 87px;
+  background-color: #3A3A3A;
+
   
 }
 
@@ -707,7 +727,7 @@ text-align: center;
   position: absolute;
   
   top: 400px;
-  left: -100px;
+  left: 0px;
   
 }
 
@@ -715,5 +735,17 @@ text-align: center;
   .footer-main {
     flex-direction: column;
     gap: 20px;
+  }
+
+  .footer-container{
+    background-color: #3A3A3A;
+    height: auto;
+  }
+  footer hr{
+    width: 80%;
+    margin: 0 auto; margin-top: 105px;
+  }
+  .footer-copyright{
+    padding-bottom: 75px;
   }
 }
