--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
   padding: 0;
   margin: 0;
   color: #ffffff;
+  /* border: 1px solid red; */
+  
+}
+
+body{
+  /* border: 4px dashed green; */
+  
 }
 :root{
   --secondary-text: rgba(255, 255, 255, 0.5);
@@ -204,7 +211,7 @@ main {
   width: 80%;
   margin: 0 auto;
  
-  margin-top: 133px;
+  /* margin-top: 133px; */
   background-color: #273648;
   display: flex;
 
@@ -336,7 +343,7 @@ td{
   font-weight: 400;
 }
 .bmi-table{
-  width: 400px;
+  /* width: 400px; */
   height: 300px;
  
 }
@@ -665,6 +672,10 @@ Respnsive For Mobile Device  📲📱📳*/
     justify-content: center;
     padding: 0;
   }
+  body{
+    overflow-x: hidden;
+   
+  }
 
   .run-container img {
     max-width: 100%;
@@ -714,11 +725,37 @@ width: 100%;
 text-align: center;
 
 }
+.banner-container{
+  max-width: 100%;
+}
+.header{
+ 
+}
+.banner-details{
+
+  max-width: 80%;
+  
+}
+.banner-img{
+  /* border: 2px solid yellowgreen; */
+  max-width: 100%;
+ 
+
+}
+img {
+  max-width: 100%;
+
+
+}
 .badge {
 
   position: absolute;
   left: 260px;
   top: 120px;
+  width: 100px;
+  font-size: .7rem;
+ padding: 20px;
+
 
 }
 
@@ -727,9 +764,39 @@ text-align: center;
   position: absolute;
   
   top: 400px;
-  left: 0px;
+  left: 0px; 
   
 }
+/* responsive bmi */
+.bmi-table{
+  border: 2px dashed rgb(128, 0, 0);
+
+}
+
+.bmi-main-container{
+  border: 2px dashed green;
+}
+.bmi-form{
+  
+  max-width: 80%;
+
+}
+
+.input-form {
+
+}
+.input-form input,
+.input-form select {
+  width: 100%; 
+  padding-left: 8px;
+
+ 
+}
+
+
+
+
+
 
 
   .footer-main {
