--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ main {
 .run-img img {
   
  
-  margin-right: 50px;
+  /* margin-right: 50px; */
   width: 485px;
   height: 415px;
 
@@ -509,6 +509,9 @@ left: 20px;
 bottom: 50px;
   z-index: 300;
 }
+.trainer-details h4{
+  color: var(--secondary-text);
+}
 /* TESTIMONIAL sECTION STYLING */
 .testimonialHeading{
   text-align: center;
@@ -684,11 +687,10 @@ footer li{
 
 
 
+
 .hide{
   display: none;
 }
-
-
 
 
 
@@ -706,6 +708,8 @@ Respnsive For Mobile Device  📲📱📳*/
     align-items: center;
     justify-content: center;
     padding: 0;
+
+   
   }
  
 
@@ -715,6 +719,7 @@ Respnsive For Mobile Device  📲📱📳*/
   }
   .run-img {
     padding:40px 0;
+   
    
   }
   .run-details button {
@@ -732,7 +737,7 @@ Respnsive For Mobile Device  📲📱📳*/
   .habit-details {
     margin-top: -120px;
   }
-
+ 
   nav ul {
     display: none;
   }
